syntax = "proto3";
option java_multiple_files = true;
option java_package = "proto.dtos.inventario";

package proto.dtos;

import "dtos/categoria.proto";

message CrearInventarioProto {
	CategoriaProto categoria = 1;
	string descripcion = 2;
	int32 cantidad = 3;
}

message ModificarInventarioProto {
	int64 idInventario = 1;
	string descripcion = 2;
	int32 cantidad = 3;
}

message InventarioProto {
	int64 idInventario = 1;
	CategoriaProto categoria = 2;
	string descripcion = 3;
	int32 cantidad = 4;
	bool eliminado = 5;
}